# Path_Simulator

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  render.yaml  vercel.json
.github/workflows/: ci.yml
backend/: CMakeLists.txt  Dockerfile
backend/include/smarttraffic/api/: Server.hpp
backend/include/smarttraffic/city/: CityGenerator.hpp
backend/include/smarttraffic/graph/: Edge.hpp  Graph.hpp  Node.hpp
backend/include/smarttraffic/pathfinding/: Pathfinder.hpp
backend/include/smarttraffic/simulation/: SimulationEngine.hpp  TrafficLight.hpp  Vehicle.hpp
backend/src/: main.cpp
backend/src/api/: Server.cpp
backend/src/city/: CityGenerator.cpp
backend/src/graph/: Graph.cpp
backend/src/pathfinding/: Pathfinder.cpp
backend/src/simulation/: SimulationEngine.cpp
backend/tests/: CityGeneratorTests.cpp  GraphTests.cpp  PathfinderTests.cpp  SimulationEngineTests.cpp
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  TESTING.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AnalyticsDashboard.tsx  ControlPanel.tsx  SimulationCanvas.tsx
frontend/src/hooks/: useSimulationSocket.ts
